<resources>
    <string name="app_name">To-do-lstrr</string>
    <string name="label_newtask">Criar Tarefa</string>
    <string name="label_title">Título</string>
    <string name="label_desc">Descreva a tarefa...</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Horário</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_descnewtask">Nova Tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Delete</string>
    <string name="label_textEmpty">Estamos com\na agenda livre!!</string>
</resources>