<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigate_bef"
        app:title="@string/label_newtask" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_ini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="32dp"
        android:hint="@string/label_title"
        app:layout_constraintStart_toStartOf="@id/guide_ini"
        app:layout_constraintEnd_toEndOf="@id/guide_final"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="32dp"
        android:hint="@string/label_desc"
        app:layout_constraintStart_toStartOf="@id/guide_ini"
        app:layout_constraintEnd_toEndOf="@id/guide_final"
        app:layout_constraintTop_toBottomOf="@+id/til_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/label_date"
        app:startIconDrawable="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="@id/guide_ini"
        app:layout_constraintEnd_toStartOf="@id/til_hour"
        app:layout_constraintTop_toBottomOf="@+id/til_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/label_hour"
        app:startIconDrawable="@drawable/ic_time"
        app:layout_constraintEnd_toEndOf="@id/guide_final"
        app:layout_constraintStart_toEndOf="@id/til_date"
        app:layout_constraintTop_toTopOf="@+id/til_date">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_addtask"
        android:layout_width="0dp"
        style="@style/Widget.MaterialComponents.Button"
        android:text="@string/label_newtask"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/guide_ini"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/label_cancel"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toEndOf="@id/guide_final"
        app:layout_constraintStart_toEndOf="@id/btn_addtask"
        app:layout_constraintTop_toTopOf="@id/btn_addtask"/>
</androidx.constraintlayout.widget.ConstraintLayout>